--- a/internal/frontend/templates/lobby_create.html
+++ b/internal/frontend/templates/lobby_create.html
@@ -71,13 +71,9 @@
                         <input class="input-item" type="number" name="clients_per_ip_limit"
                             min="{{.MinClientsPerIPLimit}}" max="{{.MaxClientsPerIPLimit}}"
                             value="{{.ClientsPerIPLimit}}" />
-                        <b>{{.Translation.Get "custom-words-per-turn-setting"}}</b>
-                        <input class="input-item" style="align-self: baseline" type="number"
-                            name="custom_words_per_turn" min="{{.MinCustomWordsPerTurn}}"
-                            max="{{.MaxCustomWordsPerTurn}}" value="{{.CustomWordsPerTurn}}" />
                         <b>{{.Translation.Get "custom-words"}}</b>
-                        <textarea class="input-item" name="custom_words"
-                            placeholder="{{.Translation.Get "custom-words-info"}}">{{.CustomWords}}</textarea>
+                        <textarea class="input-item" name="word_groups"
+                            placeholder="{{.Translation.Get "custom-words-info"}}">{{.WordGroups}}</textarea>
                         <button type="submit" class="create-button" form="lobby-create">
                             {{.Translation.Get "create-lobby"}}
                         </button>
