--- a/internal/frontend/templates/lobby_create.html
+++ b/internal/frontend/templates/lobby_create.html
@@ -1,7 +1,10 @@
 {{define "wordGroupsList"}}
     <ul>
     {{range $i, $wg := .}}
-    <li><input type="checkbox" name="word_groups" value="{{$wg.Id}}">{{$wg.Name}}</li>
+    <li class="{{if $wg.Children}}parent-item{{else}}leaf-item{{end}}">
+        <input type="checkbox" name="word_groups" class="checkbox-item" id="wgCheckbox{{$wg.Id}}" value="{{$wg.Id}}"/>
+        <label for="wgCheckbox{{$wg.Id}}">{{$wg.Name}}</label>
+    </li>
     {{if $wg.Children}}
         {{template "wordGroupsList" $wg.Children}}
     {{end}}
@@ -239,6 +242,74 @@
         } else if (joinLobbyTabButton.checked) {
             openTab('join-lobby');
         }
+        
+        // Foldable list items
+        
+        var coll = document.getElementsByClassName("parent-item");
+        var i;
+        for (i = 0; i < coll.length; i++) {
+            coll[i].addEventListener("click", function(event) {
+                if(event.offsetX<=0){
+                    // If we clicked the bullet
+                    this.classList.toggle("open-item");
+                    var content = this.nextElementSibling;
+                    if (content.style.display === "block") {
+                        content.style.display = "none";
+                    } else {
+                        content.style.display = "block";
+                    }
+                }
+            });
+        }
+        
+        //  helper function to create nodeArrays (not collections)
+        const nodeArray = (selector, parent=document) => [].slice.call(parent.querySelectorAll(selector));
+
+        //  checkboxes of interest 
+        const allThings = nodeArray('input.checkbox-item');
+
+
+        //  global listener
+        addEventListener('change', e => {
+            let check = e.target;
+
+            //  exit if change event did not come from 
+            //  our list of allThings 
+            if(allThings.indexOf(check) === -1) return;
+
+            //  check/unchek children
+            if(check.parentNode.classList.contains("parent-item")) {
+                const children = nodeArray('input.checkbox-item', check.parentNode.nextElementSibling);
+                children.forEach(child => child.checked = check.checked);
+            }
+            
+            //  traverse up from target check
+            while(check){
+                
+                const parentul = check.closest(['ul'])
+                if(parentul.previousElementSibling==null){
+                    break;
+                }
+                
+                //  find parent and sibling checkboxes (quick'n'dirty)
+                const parent   = parentul.previousElementSibling.querySelector('input.checkbox-item');
+                const siblings = nodeArray('input.checkbox-item', parentul);
+
+                //  get checked state of siblings
+                //  are every or some siblings checked (using Boolean as test function) 
+                const checkStatus = siblings.map(check => check.checked);
+                const every  = checkStatus.every(Boolean);
+                const some = checkStatus.some(Boolean);   
+                
+                //  check parent if all siblings are checked
+                //  set indeterminate if not all and not none are checked
+                parent.checked = every;   
+                parent.indeterminate = !every && every !== some;
+
+                //  prepare for nex loop
+                check = check != parent ? parent : 0;
+            }
+        })
     </script>
 </body>
 
